--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ ul{
 }
 /* When you mouse over the navigation links, change their color */
 .sidenav a:hover {
-  color:#A66D00;
+  color:#092327;
 }
 .sidenav li{
   list-style-type: none;
@@ -71,12 +71,12 @@ ul{
   display:flex;
   justify-content: center;
   align-items:center;
-  background-color:#F3F6F9;
+  background-color:#0B5351;
   height: 72em;
   margin:0;
-  /* opacity:1; */
-  background: url(images/IMG_2800.JPEG) no-repeat fixed;
-  background-size: cover;
+  opacity:1;
+  background: url(images/IMG_1941.JPEG) no-repeat fixed;
+  background-size:cover;
   background-position: top 40% center;
 }
 #homeLogo{
@@ -126,22 +126,23 @@ h2{
 }
 #history img{
   width:50em;
-  height:35em;
+  /* height:35em; */
   border-radius: 0.5em;
+  float:right;
+  margin: 0 0 0 5%;
+}
+#history video{
   float:right;
   margin: 0 0 0 5%;
 }
 .about{
   width:100%;
-  font-size: 1.85em;
-  text-align: center;
+  font-size: 1.3rem;
+  text-align:left;
   line-height: 1.5em;
-  margin:0;
+  margin:1% 0 0 0;
   color:#092327;
-  font-family:sans-serif;
-  /* opacity:0.95; */
-  /* font-family: 'Raleway', sans-serif;
-  font-weight: 600; */
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 .about a{
   color:#367588
@@ -242,7 +243,7 @@ button:hover{
   align-items: center;
   background-color:#A66D00;
   color:white;
-  height:73em;
+  height:77em;
   flex-wrap: wrap;
 }
 #rules h3{
@@ -318,45 +319,45 @@ ol{
   width: 90%;
   align-items: center;
   justify-content: space-evenly;
-  margin:0;
+  margin:0 0 3% 0;
 }
 #committee h3{
-  margin:3% 0 2% 0;
+  margin:5% 0 0 0;
 }
 .team{
   width:25%;
-  margin:0 0 1% 0;
+  margin:0;
   padding:0;
   display:flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  /* position: relative; */
+  /* bottom:6em; */
 }
+.team:last-child, .team:nth-child(5){
+  /* position: relative; */
+  /* bottom:10em; */
+}
+
 .team img{
-  height:38em;
-  width:27.4em;
+  height:24em;
+  width:24em;
   margin:0;
   padding: 0;
   box-shadow: #C0BBB7 1px 2px 4px;
-  border-radius: 0.1em;
+  border-radius: 350px;
 }
 .team:first-child{
   margin-bottom:0;
   height:458px;
 }
 .nameBox{
-  width:16em;
+  width:17em;
   height:6em;
-  background-color:white;
   color:#0B5351;
-  /* text-shadow: white 1px 2px 1px; */
-  /* margin-left:3em; */
-  border:white 2px solid;
-  position:relative;
-  bottom:2em;
-  /* box-shadow: #C0BBB7 1px; */
-  /* border-radius: 0.5em; */
-  font-family: 'Raleway', sans-serif;
+  text-shadow:#F3F6F9 1px 2px 2px;
+  font-family:'Raleway', sans-serif;
 }
 .nameBox:first-child{
   bottom:4em;
@@ -365,10 +366,6 @@ ol{
   display:block;
   text-align: center;
   padding-top:0.5em;
-  /* color:white; */
-  /* text-transform: uppercase;
-  position:relative;
-  bottom:2em; */
 }
 .name{
   font-size:1.1rem;
@@ -387,17 +384,17 @@ ol{
   margin:0;
 }
 .blankBox{
-  height:6em;
-  width:19em;
+  height:24em;
+  width:24em;
   margin:0;
   padding: 0;
   box-shadow: #C0BBB7 1px 2px 4px;
-  border-radius: 0.5em;
-  background-color:#F3F6F9;
+  border-radius:350px;
+  background-color:#0B5351;
   display: flex;
   justify-content:center;
   align-items: flex-start;
-  color:#367588
+  color:#F3F6F9;
 }
 .blankBox > span{
   color:#472f17;
@@ -443,20 +440,22 @@ form {
 form input{
   width:47%;
   margin-bottom: 0.5%;
-  height:3em;
-  font-family:sans-serif;
+  height:2.5em;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   border-radius: 0.5em;
   border-color:#C0BBB7;
   border-width: 3px;
+  font-size:1.15rem;
 }
 textarea{
   width: 94.5%;
-  height:20em;
-  font-family:sans-serif;
+  height:14em;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   color:black;
   border-radius: 0.5em;
   border-color:#C0BBB7;
   border-width: 3px;
+  font-size: 1.15rem;
 }
 .form li{
   list-style-type: none;
@@ -464,10 +463,10 @@ textarea{
 }
 .form li input{
   width:20%;
-  margin:1% 1% 0 0;
+  margin:0 1% 0 0;
   background-color:#0B5351;
   color:white;
-  font-family:sans-serif; 
+  font:1.05rem 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   border-radius: .5em;
   border:2px double #bbb;
   cursor: pointer;
@@ -480,7 +479,7 @@ textarea{
 .contactInfo{
   width:28%;
   display:inline-block;
-  margin: 5% 5% 5% 0;
+  margin: 3% 5% 5% 0;
 }
 .contactBox{
   margin-bottom:5%;
@@ -502,8 +501,8 @@ textarea{
   font-weight: bold;
 }
 .contactBox img{
-  width: 3.5em;
-  height:2.7em;
+  width: 2.7em;
+  height:1.8em;
   display: inline;
   padding-right: 2%;
 }
