--- a/style.css
+++ b/style.css
@@ -389,7 +389,7 @@ button:hover{
   
 }
 #modalRules{
-  max-width:1300px;
+  max-width:1200px;
   height:700px;
   margin:auto;
   background-color:#0B5351;
@@ -482,13 +482,13 @@ ol{
   display:flex;
   flex-direction: row;
   flex-wrap: wrap;
-  width: 85%;
+  width: 95%;
   align-items: center;
   justify-content: space-evenly;
-  margin:0 0 6% 0;
+  margin:-3% 0 4% 0;
 }
 #committeeHeading{
-  margin:2% 0 2% 0;
+  margin:2% 0;
   color:#A66D00;
   font-size:2.5rem;
   text-shadow:none;
@@ -498,7 +498,7 @@ ol{
   margin: 4% 0 0 0;
 }
 .team{
-  width:33%;
+  width:15%;
   margin:-1% 0 0 0;
   padding:0;
   display:flex;
@@ -509,12 +509,12 @@ ol{
   /* bottom:6em; */
 }
 .team img{
-  height:27em;
-  width:27em;
+  height:24em;
+  width:18em;
   margin:0;
   padding: 0;
   box-shadow: #C0BBB7 1px 2px 4px;
-  border-radius: 350px;
+  /* border-radius: 350px; */
 }
 .team:first-child{
   margin-bottom:0;
@@ -553,11 +553,10 @@ ol{
 }
 .blankBox{
   height:24em;
-  width:24em;
+  width:18em;
   margin:0;
   padding: 0;
-  box-shadow: #C0BBB7 1px 2px 4px;
-  border-radius:350px;
+  /* box-shadow: #C0BBB7 1px 2px 4px; */
   background-color:#0B5351;
   display: flex;
   justify-content:center;
