--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ ul{
 }
 #dove{
   width:18em;
-  margin: 25% 0 0 12%;
+  margin: 25% 0 0 15%;
   border-radius: 50em;
   opacity: 0.9;
 }
@@ -99,14 +99,17 @@ ul{
   flex-direction: column;
   justify-content: center;
   align-items:center;
-  background-color:rgba(0,0,0,0.4);
+  background-color:rgba(0,0,0,0.5);
   height: 72em;
   margin:0;
   background: url(images/DSC_0054-copy.JPG) no-repeat fixed;
   background-size:cover;
   background-position: center;
-  /* background-position: left 10% top 60%; */
+  background-position: left 10% top 60%;
 }
+/* #bgPhoto{
+  width:60%;
+} */
 #mainLogo{
   font-size: 8em;
   color:#F3F6F9;
@@ -117,6 +120,7 @@ ul{
   margin:0;
   overflow: hidden;
   animation:appear 6s;
+  z-index: 1;
 }
 @keyframes appear{
   0%{opacity: 0;}
@@ -135,6 +139,7 @@ ul{
   align-items: center;
   overflow: hidden;
   margin-bottom: 5%;
+  z-index: 1;
 }
 
 #mainLogo2{
@@ -305,6 +310,7 @@ button:hover{
   justify-content: center;
   align-items: center;
   margin:0;
+  /* width:33.333%; */
 }
 .linkOut img{
   max-width:506px;
@@ -399,8 +405,8 @@ button:hover{
   
 }
 .modal{
-  max-width:750px;
-  height:400px;
+  max-width:500px;
+  height:250px;
   margin:auto;
   background-color:#0B5351;
   position:absolute;
@@ -420,13 +426,35 @@ button:hover{
   z-index: 1;
   background-color: rgba(0,0,0,0.5);
 }
-#close-modal-btn{
+#close-modal-btn, #close-pricing-modal{
   margin:0;
   color:#F3F6F9;
   opacity:0.7;
   text-transform: uppercase;
   
 }
+#close-pricing-modal{
+  float:right;
+  margin:0;
+}
+#pricingHeading{
+  width:100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#pricingHeading > p{
+  width:80%;
+  margin-top: 10%;
+  text-align: center;
+}
+#pricingHeading > h3{
+  margin:0 0 3% 0;
+}
+/* #pricingHeading > img{
+  width:30%;
+} */
 #modalRules{
   max-width:1200px;
   height:700px;
@@ -453,7 +481,7 @@ button:hover{
 .hide{
   opacity:0;
 }
-ol{
+ol, #pricingHeading > p{
   font-size:1.1rem;
   line-height: 1.2em;
   letter-spacing: 0.1em;
@@ -613,6 +641,7 @@ ol{
   color:#A66D00;
   font-size:2rem;
   text-shadow:none;
+  /* animation:slide 6s infinite; */
 }
 #contactHeading::first-letter{
   color:#0B5351;
@@ -620,7 +649,7 @@ ol{
 #contactSpan{
   font-size:2rem;
   margin: 0 0 5% 0;
-  color:#0B5351
+  color:#0B5351;
 }
 .row {
   display: flex;
@@ -629,12 +658,12 @@ ol{
   box-sizing: border-box;
   align-items: center;
   justify-content: stretch;
-  width:90%;
+  width:100%;
   /* opacity: 0.9; */
   color:#A66D00;
 }
 .form{
-  width: 45%;
+  width: 40%;
   margin: 5% 5% -3% 5%;
   display: inline-block;
   background-color: white;
@@ -672,20 +701,21 @@ textarea{
 .form li input{
   width:20%;
   margin:0;
-  background-color:#0B5351;
+  background-color:#A66D00;
   color:white;
   font:1.05rem 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   border-radius: .5em;
   border:2px double #F3F6F9;
   cursor: pointer;
+  opacity:1;
 }
 .form li input:hover{
-  background-color: #A66D00;
+  background-color: #0B5351;
   color:white;
   border-color: white;
 }
 .contactInfo{
-  width:35%;
+  width:30%;
   display:inline-block;
   margin: 4% 0 0 0;
   /* animation:slide 6s infinite; */
@@ -785,11 +815,54 @@ footer{
   from {opacity: .7} 
   to {opacity: 1}
 }
-
+@media all and (max-width: 1280px) {
+  .linkOut img{
+    max-width:420px;
+    height:450px; 
+  }
+  #quickLinks{
+    height:60em;
+    margin-bottom: -14em;
+  }
+  .team img{
+    height:28em;
+    width:18em;
+  }
+  .blankBox{
+    height:28em;
+    width:18em;
+  }
+}
+@media all and (max-width: 1120px) {
+  .linkOut img{
+    max-width:370px;
+    height:450px; 
+  }
+  #quickLinks{
+    height:59em;
+    margin-bottom: -14em;
+  }
+  .detailHeading{
+    font-size: 1.7rem;
+  }
+  .team img{
+    height:28em;
+    width:16em;
+  }
+  .blankBox{
+    height:28em;
+    width:16em;
+  }
+}
+@media all and (max-width: 1020px) {
+  .about{
+    width:100%;
+  }
+}
 
 @media all and (max-width: 480px) {
   body{
-    background-color: #F3F6F9;
+    /* background-color: #F3F6F9; */
     height:auto;
     overflow-x: hidden;
   }
