--- a/style.css
+++ b/style.css
@@ -680,6 +680,11 @@ form input{
   border-color:#A66D00;
   border-width: 2px;
   font-size:1.15rem;
+  padding-left: 2%;
+}
+#contact-name{
+  width:94.5%;
+  padding-left: 3%;
 }
 textarea{
   width: 94.5%;
@@ -926,19 +931,40 @@ footer{
   .detailHeading{
     font-size: 1.7rem;
   }
+  .three{
+    display:flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 90%;
+    align-items: center;
+    justify-content: space-evenly;
+    margin:-3% 0 2% 0;
+  }
+  .team{
+    width:30%;
+  }
   .team img{
     height:28em;
-    width:14em;
+    width:22em;
   }
   .blankBox{
     height:28em;
-    width:14em;
+    width:22em;
   }
+  .pop-out:hover
+{
+  -ms-transform: scale(1, 1);
+  -webkit-transform: scale(1, 1);
+  transform: scale(1, 1);
+}
   .form{
     width: 40%;
     margin: 5% 5% -3% 5%;
     display: inline-block;
     background-color: white;
+  }
+  .form li input{
+    width:28%;
   }
   .contactInfo{
     width:30%;
@@ -954,6 +980,36 @@ footer{
     font-size:1.5rem;
   }
 }
+
+@media all and (max-width: 940px) {
+  .details{
+    bottom:13em;
+  }
+  .linkOut img{
+    max-width:310px;
+    height:400px; 
+  }
+  #quickLinks{
+    height:53em;
+    margin-bottom: -14em;
+  }
+  .detailHeading{
+    font-size: 1.5rem;
+  }
+  .mapouter{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  iframe{
+    width:70%;
+    margin-right: 10%;
+  }
+}
+@media all and (max-width: 820px) {
+
+  }
 
 @media all and (max-width: 480px) {
   body{
