--- a/style.css
+++ b/style.css
@@ -192,7 +192,7 @@ ul{
   text-transform: uppercase;
   letter-spacing: 0.4em;
   margin: 0 0 0 0;
-  animation:slide 8s;
+  animation:slide 6s;
 }
 @keyframes reveal{
   0%{opacity: 0; width: 0px;}
@@ -205,7 +205,63 @@ ul{
   0%{margin-left:-800px;}
   20%{margin-left:-800px;}
   35%{margin-left:0px;}
-100%{margin-left:0px;}
+  100%{margin-left:-110px;}
+}
+/*fade out overlay */
+.fade-out{
+  animation-name: FadeOut;
+  animation-duration: 5s;
+  transition-timing-function: linear;
+}
+
+@keyframes FadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    display: none;
+  }
+}
+
+@-moz-keyframes FadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    display:none;
+  }
+}
+
+@-webkit-keyframes FadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    display:none;
+  }
+}
+
+@-o-keyframes FadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    display:none;
+  }
+}
+
+@-ms-keyframes FadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    display:none;
+  }
 }
 #logo{
   width:6%;
@@ -523,6 +579,9 @@ button:hover{
 } 
 .hide{
   opacity:0;
+}
+.noDisplay{
+  display: none;
 }
 ol, #pricingHeading > p{
   font-size:1.1rem;
